--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,3 @@
-
 .box {
     width: 90%;
     margin: 0 auto;
@@ -13,18 +12,25 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (min-width: 768px) {
+    .box {
+        flex-direction: row;
+    }
+}
+
+
 .title {
     font-size: 2em;
     text-align: center;
     color: #fffbfb;
 }
-.inputBox{
+
+.inputBox {
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
     padding: 12px;
-    
 }
-
-
