--- a/app/component/component.module.css
+++ b/app/component/component.module.css
@@ -1,3 +1,4 @@
+/* input component */
 .Inputform {
   display: flex;
   align-items: center;
@@ -5,19 +6,23 @@
 }
 
 .Inputform div {
-  display: flex; /* Ensure the icons are in a flex container */
-  align-items: center; /* Align icons vertically in the center */
+  display: flex;
+  /* Ensure the icons are in a flex container */
+  align-items: center;
+  /* Align icons vertically in the center */
 }
 
 .icon {
   margin-left: 10px;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 
 
 
-/* cities */
+/* cities component */
+/*  */
 
 .cities {
   display: flex;
@@ -40,12 +45,36 @@
 @media screen and (max-width: 600px) {
   .cities {
     flex-direction: row;
-    flex-wrap: wrap; /* Example: stack items vertically on small screens */
+    flex-wrap: wrap;
+    /* Example: stack items vertically on small screens */
   }
 
   .cityButton {
-    font-size: small; /* Example: reduce font size on small screens */
-    padding: 8px; /* Example: adjust padding on small screens */
-    margin: 5px;  /* Example: reduce margin on small screens */
+    font-size: small;
+    /* Example: reduce font size on small screens */
+    padding: 8px;
+    /* Example: adjust padding on small screens */
+    margin: 5px;
+    /* Example: reduce margin on small screens */
   }
+}
+
+
+/* time component */
+.Timezone {
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  margin-top: 6px;
+}
+.CityTime{
+  color: white;
+  size: 1rem;
+  font-weight: 500;
+}
+.PlaceName{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  margin-top: 5px;
 }
