--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 @media (min-width: 768px) {
